// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.ts should display falsy items 1`] = `

<div class="v-select-list v-card theme--light">
  <div role="list"
       class="v-list theme--light"
  >
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          0
        </div>
      </div>
    </div>
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          null
        </div>
      </div>
    </div>
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          false
        </div>
      </div>
    </div>
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          undefined
        </div>
      </div>
    </div>
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`.ts should display no-data-text when item slot is provided 1`] = `

<div class="v-select-list v-card theme--light">
  <div role="list"
       class="v-list theme--light"
  >
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          undefined
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`.ts should generate children 1`] = `

<div class="v-select-list v-card theme--light">
  <div role="list"
       class="v-list theme--light"
  >
    <div class="v-subheader theme--light">
      true
    </div>
    <hr class="v-divider theme--light">
    <div aria-selected="false"
         role="listitem"
         tabindex="-1"
         class="v-list-item v-list-item--link theme--light"
    >
      <div class="v-list-item__content">
        <div class="v-list-item__title">
          foo
        </div>
      </div>
    </div>
  </div>
</div>

`;
